--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -4,6 +4,8 @@
 }
 nav a {
     text-align: center;
+    color: aqua;
+    text-decoration: none;
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -13,4 +15,76 @@ nav a {
 }
 main section {
     text-align: center;
+}
+#background {
+    height: 725px;
+}
+body {
+    background-color: #fcfcfb;
+    color: aqua;
+}
+header {
+    background-color: #ffffff;
+    color: aqua;
+}
+nav a:hover {
+    background-color: black;
+    color: aquamarine;
+}
+h4 {
+    background-color: aqua;
+    color: aqua;
+}
+.book, .join {
+    background-color: #ffffff;
+    color: aqua;
+    text-decoration: none;
+}
+.book:hover, .join:hover {
+    background-color: #fcfcfb;
+    color: aqua;
+}
+.msg h2 {
+    background-color: #fcfcfb;
+    color: #fcfcfb;
+}
+.msg p {
+    background-color: #fcfcfb;
+    color: #fcfcfb;
+}
+#background {
+    background-color: #fcfcfb;
+    color: aqua;
+}
+.msg {
+    background-color: firebrick;
+    color: aqua;
+}
+footer {
+    background-color: #ffffff;
+    color: aqua;
+}
+footer a {
+    background-color: #fcfcfb;
+    color: #fcfcfb;
+    text-decoration: none;
+}
+footer a:hover {
+    background-color: #fcfcfb;
+    color: #fcfcfb;
+}
+footer p {
+    font-size: 1.2em;
+}
+footer p a:hover {
+    text-decoration: underline;
+}
+.logo {
+    width: 80px;
+}
+.icon {
+    width: 80px;
+}
+#hero-img {
+    width: 100%;
 }
