--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -8,6 +8,7 @@ nav a {
     text-align: center;
     color: #de6b48;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -18,17 +19,27 @@ nav a {
 main section {
     text-align: center;
 }
+main section img {
+    box-sizing: border-box;
+}
 #background {
     height: 725px;
 }
 .home-title {
     font-family: 'Rocksalt', 'Bradley Hand', sans-serif;
     font-size: 2em;
+    margin-top: 10px;
 }
 body {
     background-color: lightgray;
     color: #de6b48;
     font-family: Raleway, Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color: lightblue;
@@ -47,6 +58,9 @@ h4 {
     color: #de6b48;
     text-decoration: none;
     font-size: 18px;
+    padding: 15px, 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: lightgray;
@@ -61,6 +75,7 @@ h4 {
     background-color: lightgray;
     color: #de6b48;
     font-size: .8em;
+    padding-bottom: 15 px;
 }
 #background {
     background-color: lightgray;
@@ -69,10 +84,23 @@ h4 {
 .msg {
     background-color: lightgray;
     color: #de6b48;
+    line-height: 1.5em;
+    padding: 35px;
+}
+.rivers-card {
+    margin: 200px 0;
+}
+.camping-card {
+    margin: 200px 0;
+}
+.rapids-card {
+    margin: 200px 0;
 }
 footer {
     background-color: lightgray;
     color: #de6b48;
+    padding: 25px, 50px;
+    margin-top: 200px;
 }
 footer a {
     background-color: lightgray;
@@ -89,12 +117,22 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }
+footer .social img {
+    padding-top: 15px;
+}
 .logo {
     width: 80px;
 }
+#logo_link {
+    padding-top: 5px;
+}
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
+}
+.card-img {
+    border: 10px solid black;
 }
