--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -33,7 +33,7 @@ main section img {
 body {
     background-color: lightgray;
     color: #de6b48;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
