--- a/positionstyles.css
+++ b/positionstyles.css
@@ -33,50 +33,74 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px 50px;
+  grid-auto-rows: 50px;
+  grid-gap: 0;
 }
 .red2 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
-  background-color: green; 
+  background-color: green;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
-  background-color: gold; 
+  background-color: gold;
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 4 / 5;
+  grid-row: 4 / 5;
 } 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto 1fr auto;
+  height: 400px;
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1 / -1;
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 100%; 
   background-color: green;
+  grid-column: 1;
+  grid-row: 2;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 100%; 
   background-color: gold; 
+  grid-column: 3;
+  grid-row: 2;
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
   background-color: blue; 
+  grid-column: 1 / -1;
+  grid-row: 3;
 } 
 /* Activity 4 styles */ 
 .content4 {
