--- a/positionstyles.css
+++ b/positionstyles.css
@@ -105,54 +105,66 @@
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   height: 400px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 450px; 
+  height: 100%; 
   background-color: red; 
+  grid-column: 1 / 2;
+  grid-row: 1 / -1;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: green; 
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: gold; 
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: blue; 
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
 } 
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
+  position: relative;
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 25%;
+  height: 175px;
   background-color: green; 
-
+  float: left;
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%;
+  height: 250px;
   background-color: gold; 
-
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
+  clear: both;
 } 
 /* Activity 6 styles */ 
 .content6 {
