--- a/positionstyles.css
+++ b/positionstyles.css
@@ -169,26 +169,33 @@
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: repeat(7, 100px);
+  grid-template-rows: repeat(7, 100px);
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  grid-column: 1 / span 5;
+  grid-row: 1 / span 3;
+  background-color: red;
+  z-index: 1;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 1 / span 3;
+  grid-row: 5 / span 3;
   background-color: green; 
+  z-index: 3;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 5 / span 3;
+  grid-row: 3 / span 5;
   background-color: gold; 
+  z-index: 3;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 2 / span 5;
+  grid-row: 2 / span 5;
   background-color: blue; 
+  z-index: 2;
 } 
 
 
