--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -44,6 +44,12 @@ h2 {
 header {
     background-color: lightblue;
     color: #de6b48;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 nav a:hover {
     background-color: lightgray;
@@ -125,6 +131,8 @@ footer .social img {
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .icon {
     width: 80px;
@@ -135,4 +143,23 @@ footer .social img {
 }
 .card-img {
     border: 10px solid #e5b181;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-row: 1 / span 1;
+    grid-column: 2 / span 2;
+    margin-top: 100px;
+}
+#home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
