changed background colors

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -56,8 +56,7 @@ nav a:hover {
     color: #de6b48;
 }
 h4 {
-    background-color: whitesmoke;
-    color: #de6b48;
+    color: lightskyblue;
 }
 .book, .join {
     background-color: whitesmoke;
