--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -92,23 +92,23 @@ h4 {
     color: #de6b48;
     line-height: 1.5em;
     padding: 35px;
-    grid-column: 6 / span 5;
-    grid-row: 6 / span 2;
+    grid-column: 6 / 10;
+    grid-row: 6 / 8;
     box-shadow: 5px 5px 10px #6f7364;
 }
 .rivers-card {
     margin: 200px 0;
-    grid-column: 2 / span 3;
+    grid-column: 2 / 4;
     grid-row: 2 / span 2;
 }
 .camping-card {
     margin: 200px 0;
-    grid-column: 5 / span 3;
+    grid-column: 5 / 7;
     grid-row: 2 / span 2;
 }
 .rapids-card {
     margin: 200px 0;
-    grid-column: 8 / span 3;
+    grid-column: 8 / 10;
     grid-row: 2 / span 2;
 }
 footer {
@@ -156,8 +156,8 @@ footer .social img {
 .card-img, .mountains {
     border: 10px solid #e5b181;
     width: 100%;
-    grid-column: 2 / span 6;
-    grid-row: 5 / span 3;
+    grid-column: 2 / 8;
+    grid-row: 5 / 8;
 }
 #hero {
     display: grid;
@@ -174,7 +174,7 @@ footer .social img {
     grid-column: 2 / span 2;
     margin-top: 100px;
 }
-#home-grid {
+.home-grid {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
